# docflow

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md
app/: docker-compose.yml
app/backend/: go.mod
app/backend/internal/handler/: handler_test.go
app/backend/internal/service/: markdown_test.go  pdf_extractor.go
app/backend/pkg/pdf/: template.go
app/frontend/: Dockerfile  package-lock.json  tailwind.config.js  vitest.config.js
app/frontend/src/: index.css
app/frontend/src/hooks/: useConverter.js  useFiles.test.js  usePreview.js  useTheme.test.js
app/frontend/src/services/: api.js  api.test.js
app/frontend/src/utils/: helpers.test.js
app/scripts/: build.sh  deploy.sh  docflow.service
backend/: .dockerignore  Dockerfile  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go  config_test.go
backend/internal/handler/: handler.go
backend/internal/middleware/: middleware.go
backend/internal/model/: models.go  models_test.go
backend/internal/service/: converter.go  markdown.go
docs/: DEPLOYMENT.md
examples/go/: main.go
examples/java/: Example.java
examples/python/: example.py
frontend/: .dockerignore  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/ConvertModal/: MergePreview.jsx  index.jsx
frontend/src/components/FileList/: SortableFileItem.jsx
frontend/src/components/Header/: index.jsx
frontend/src/components/PdfExtractor/: index.jsx
frontend/src/components/Preview/: MarkdownPreview.jsx  index.jsx
frontend/src/components/ui/: Button.test.jsx  Card.jsx  Modal.jsx  TabSwitch.jsx  (+1 more)
frontend/src/hooks/: useFiles.js  usePdfExtractor.js  useTheme.js
frontend/src/test/: setup.js
frontend/src/utils/: helpers.js
sdks/go/: README.md  go.mod  go.sum
sdks/go/docflow/: batch_processor.go  converter.go  docflow_test.go  extractor.go  markdown.go  options.go  template.go  types.go
sdks/java/: README.md  pom.xml
sdks/python/: README.md  pyproject.toml
sdks/python/docflow/: __init__.py  batch_processor.py  client.py  converter.py  extractor.py  markdown.py  template.py  types.py
sdks/python/docflow/config/: __init__.py  chunking.py  doc_intel.py  llm.py  metadata.py
sdks/python/docflow/formats/: __init__.py  csv_format.py  docx_format.py  excel_format.py  txt_format.py
sdks/python/docflow/rag/: __init__.py  chunker.py  image_describer.py  llm_processor.py  rag_processor.py
sdks/python/docflow/search/: __init__.py  azure_search.py
sdks/python/docflow/storage/: __init__.py  azure.py  base.py  local.py  s3.py
sdks/python/docflow/storage/vector/: __init__.py  base.py  mongodb.py  postgres.py
sdks/python/tests/: test_docflow.py
(+76 files in other folders)
